Bug 13017 - Login page image replacement technique fails when browser width exceeds 2000 pixels
This patch updates the image replacement technique used for Koha's login
page. The old technique used a negative text-indent value to move the
text offscreen, but that begins to fail more and more often as screens
get larger.

The new technqiue is described here:
http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/

Note: This patch has not been tested in any Internet Explorer version!

To test you must have a screen which is wider than 2000 pixels. Apply
the patch, clear your browser cache and view the staff client login
page. The logo on the login form should look correct with no
corresponding text appearing anywhere on the screen.


(cherry picked from commit 87a0b79a65f179fdef5aee98701660cca00a273e)

--- a/koha-tmpl/intranet-tmpl/prog/en/css/login.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/login.css
@@ -84,10 +84,12 @@ label {
 }
 
 #login h1 a {
+    /* http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/ */
 	display: block;
-	text-indent: -1000px;
 	height: 74px;
-	border-bottom: none;
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #login input {
